appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
- assertVisible: "Welcome Back"
- tapOn: "Create one"
- assertVisible: "Create Account"
- tapOn: "Sign In"
- assertVisible: "Welcome Back"
